Update project configuration and enhance database schema
- Added new entry to .gitignore for dist-electron directory.
- Updated package.json to change the main entry point and added postinstall script for dependencies.
- Refactored tailwind.config.js to improve theme configuration and added new color definitions.
- Removed obsolete Vite configuration and SQL migration files.
- Updated database service to sort tracked artists by username.
- Enhanced IPC interface and renderer types for better type safety.
- Made various adjustments to CSS and HTML files for improved styling and structure.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ npm-debug.log
 # Выходные директории Electron-Vite
 /out
 /dist
+/dist-electron
 
 # Логи и кэш
 .electron-builder
@@ -41,4 +42,4 @@ Thumbs.db
 # --- Локальная Конфигурация и Секреты ---
 .env               # Основной файл секретов
 .env.local         # Локальные/девелоперские переменные
-.env.*.local       # Расширенные локальные файлы
+.env.*
