--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Build & Release
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
 
 jobs:
   quality:
@@ -17,20 +17,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install Dependencies
         run: npm ci
 
       # --- Проверки ---
-      
+
       - name: Type Check (TypeScript)
-        run: npm run typecheck 
-        
-      # Если настроен ESLint
-      # - name: Lint
-      #   run: npm run lint
+        run: npm run typecheck
+
+      - name: Lint
+        run: npm run lint
 
   build-apps:
     name: 📦 Build Electron App
@@ -38,17 +37,17 @@ jobs:
     # Строим на разных ОС, если нужно, или только на Windows
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest] 
+        os: [windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-          
+          node-version: "20"
+          cache: "npm"
+
       - name: Install Dependencies
         run: npm ci
 
