chore: update dependencies and enhance application features
- Upgraded axios to version 1.13.2 in package.json and package-lock.json for improved performance and security.
- Enhanced linting configuration to enforce stricter rules and added a validation script in package.json.
- Expanded README.md with new sections for gallery screenshots, keymap shortcuts, and installation instructions.
- Refactored database schema to include new settings management and artist post handling.
- Improved IPC interface to support new functionalities for managing artists and posts.
- Updated renderer components to enhance user experience with better state management and UI interactions.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit",
     "postinstall": "electron-builder install-app-deps",
-    "lint": "eslint ."
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "validate": "npm run typecheck && npm run lint"
   },
   "keywords": [
     "electron",
@@ -51,7 +52,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.17.0",
-    "axios": "^1.6.2",
+    "axios": "^1.13.2",
     "better-sqlite3": "^9.2.2",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.3",
