--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nsfw-booru-desktop-client",
   "productName": "NSFW Booru Client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A modern, secure desktop companion for browsing booru-style imageboard content",
   "main": "out/main/main.js",
   "type": "module",
   "scripts": {
-    "dev": "electron-vite dev",
+    "dev": "chcp 65001 && electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
     "db:migrate": "ts-node src/main/db/migrate.ts",
