--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "validate": "npm run typecheck && npm run lint",
     "dist": "npm run build && electron-builder --publish always",
-    "patch": "npm version patch && git push --follow-tags",
-    "patch minor": "npm version minor && git push --follow-tags",
-    "patch major": "npm version major && git push --follow-tags"
+    "release:minor": "npm version minor && git push --follow-tags",
+    "release:patch": "npm version patch && git push --follow-tags",
+    "release:major": "npm version major && git push --follow-tags"
   },
   "keywords": [
     "electron",
