feat: enhance database settings management and improve build configurations
- Added new fields for safe mode and adult confirmation in the settings schema and updated related database logic.
- Enhanced the settings payload validation to include optional fields for user preferences.
- Updated the Electron Vite configuration to include source maps and alias resolution for shared modules.
- Modified package.json to support multiple build targets, including portable installations.
- Removed the obsolete db-service.ts file to streamline the database service layer.

--- a/package.json
+++ b/package.json
@@ -133,8 +133,16 @@
       "releaseType": "draft"
     },
     "win": {
-      "target": "nsis",
-      "artifactName": "RuleDesk-Setup-${version}.${ext}"
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "artifactName": "RuleDesk-${target}-${version}.${ext}"
+    },
+    "portable": {
+      "artifactName": "RuleDesk-Portable-${version}.exe",
+      "requestExecutionLevel": "user",
+      "splashImage": "resources/splash.png"
     },
     "mac": {
       "target": "dmg"
