chore: remove unused splash image reference from portable configuration in package.json

--- a/package.json
+++ b/package.json
@@ -153,8 +153,7 @@
     },
     "portable": {
       "artifactName": "RuleDesk-Portable-${version}.exe",
-      "requestExecutionLevel": "user",
-      "splashImage": "resources/splash.png"
+      "requestExecutionLevel": "user"
     },
     "mac": {
       "target": "dmg"
