--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dist": "npm run build && electron-builder",
     "release:minor": "npm version minor && git push --follow-tags",
     "release:patch": "npm version patch && git push --follow-tags",
-    "release:major": "npm version major && git push --follow-tags"
+    "release:major": "npm version major && git push --follow-tags",
+    "ctx:update": "npx ts-node scripts/generate-tree.ts",
+    "ctx:gen": "npm run ctx:update && npx ts-node scripts/gen-gemini-prompt.ts"
   },
   "keywords": [
     "electron",
@@ -66,8 +68,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.13.2",
     "better-sqlite3": "^9.2.2",
@@ -85,6 +89,7 @@
     "react-i18next": "^16.5.0",
     "react-router-dom": "^7.10.1",
     "react-virtuoso": "^4.17.0",
+    "repomix": "^1.10.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
@@ -117,7 +122,13 @@
       "!**/.eslintrc*",
       "!**/.vscode",
       "drizzle/**",
-      "!**/.gitattributes"
+      "!**/.gitattributes",
+      "!.cursorrules",
+      "!**/.ai/**",
+      "!**/scripts/**",
+      "!**/repomix.config.json",
+      "!**/.cursorrules",
+      "!**/repomix-output.*"
     ],
     "extraFiles": [],
     "extraResources": [
