--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "release:patch": "npm version patch && git push --follow-tags",
     "release:major": "npm version major && git push --follow-tags",
     "ctx:update": "npx ts-node scripts/generate-tree.ts",
-    "ctx:gen": "npm run ctx:update && npx ts-node scripts/gen-gemini-prompt.ts"
+    "ctx:gen": "npm run ctx:update && npx ts-node scripts/gen-gemini-prompt.ts",
+    "doc:gen": "python scripts/auto_doc.py"
   },
   "keywords": [
     "electron",
