chore: refactor project structure and enhance dependency management
- Removed cursorrules.txt as it was redundant.
- Updated package.json to include new audit scripts for code and dependencies.
- Adjusted package-lock.json to reflect the new project name 'ruledesk' and added several new dependencies for improved functionality.
- Updated project structure in GEMINI_PROMPT.txt and tree.txt to reflect recent changes.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "release:major": "npm version major && git push --follow-tags",
     "ctx:update": "npx ts-node scripts/generate-tree.ts",
     "ctx:gen": "npm run ctx:update && npx ts-node scripts/gen-gemini-prompt.ts",
-    "doc:gen": "python scripts/auto_doc.py"
+    "audit:code": "node scripts/anti_abstractor.cjs ./src",
+    "audit:deps": "node scripts/dependency_detox.cjs"
   },
   "keywords": [
     "electron",
