--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
     "url": "https://github.com/KazeKaze93/ruledesk.git"
   },
   "scripts": {
+    "// DEV FLOW": "---",
     "dev": "chcp 65001 && electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
+    "postinstall": "electron-builder install-app-deps",
+    "// DATABASE": "---",
     "db:migrate": "ts-node src/main/db/migrate.ts",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:studio": "drizzle-kit studio",
+    "// QUALITY CONTROL": "---",
     "typecheck": "tsc --noEmit",
-    "postinstall": "electron-builder install-app-deps",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "validate": "npm run typecheck && npm run lint",
+    "// ARCHITECTURE & INQUISITOR": "---",
+    "arch:stats": "inquisitor analyze .",
+    "arch:police": "inquisitor police ./src",
+    "arch:audit": "inquisitor audit ./src",
+    "arch:deps": "inquisitor detox",
+    "arch:viz": "inquisitor viz",
+    "// AI CONTEXT": "---",
+    "ctx:gen": "tsx scripts/context-packer.ts",
+    "// RELEASE": "---",
     "dist": "npm run build && electron-builder",
     "release:minor": "npm version minor && git push --follow-tags",
     "release:patch": "npm version patch && git push --follow-tags",
-    "release:major": "npm version major && git push --follow-tags",
-    "ctx:gen": "tsx scripts/context-packer.ts",
-    "audit:code": "node scripts/anti_abstractor.cjs ./src",
-    "audit:deps": "node scripts/dependency_detox.cjs",
-    "viz": "node scripts/viz/server.cjs",
-    "audit:repo": "inquisitor analyze ."
+    "release:major": "npm version major && git push --follow-tags"
   },
   "keywords": [
     "electron",
@@ -73,6 +80,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@kazekaze93/repo-inquisitor": "github:KazeKaze93/repo-inquisitor",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
